package pizzaria.model;

public interface Promocional {
    void desconto(int percentual);
}
